# FB-CLI

./: Cargo.toml  README.md
src/: main.rs  utils.rs
src/commands/: horizon.rs  mod.rs  repo.rs
