[package]
name = "fbcli"
version = "0.1.0"
edition = "2021"
description = "Far Beyond Development Kit - CLI tool for Horizon plugin development and repo management"
authors = ["Far Beyond Dev Team"]

[[bin]]
name = "fbcli"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive", "color"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
console = "0.15"
indicatif = "0.17"
reqwest = { version = "0.11", features = ["json"] }
git2 = "0.18"
walkdir = "2.4"
toml_edit = "0.21"
which = "4.4"
colored = "2.0"

[dev-dependencies]
tempfile = "3.8"